[package]
name = "db233"
version = "0.1.0"
edition = "2021"
description = "Rust ORM / Database library for stateful game servers with high QPS MySQL"
license = "Apache-2.0"
repository = "https://github.com/neko233-com/db233-rust"
keywords = ["orm", "mysql", "game-server", "session-cache", "wal"]
categories = ["database"]

[dependencies]
mysql_async = "0.33"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
log = "0.4"
env_logger = "0.11"
parking_lot = "0.12"
lru = "0.12"
chrono = { version = "0.4", features = ["serde"] }
config = { version = "0.14", features = ["json"] }
derive_more = "0.99"
async-trait = "0.1"
base64 = "0.22"

[dev-dependencies]
rand = "0.8"

